# starsessions

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: contributing.md
.github/workflows/: lint.yml  lint_and_test.yml  publish.yml  python-package.yml  python-publish.yml  qa.yml
example/: app.py  fastapi.py  fastapi_app.py
examples/: app.py  cookie.py  cookie_domain.py  cookie_path.py  database_.py  expiring.py  fastapi_app.py  login.py  memory.py  redis.py  redis_.py  rolling.py  session_only.py
fastapi_backstage_sesh/: __init__.py  backstage_config.py  load_config.py  middleware.py  session.py
fastapi_backstage_sesh/backends/: __init__.py  base.py  cookie.py  in_memory.py
fastapi_sesh/: __init__.py  exceptions.py  middleware.py  session.py
fastapi_sesh/backends/: __init__.py  base.py  cookie.py  in_memory.py
starsessions/: __init__.py  encryptors.py  exceptions.py  middleware.py  serializers.py  session.py  types.py
starsessions/backends/: __init__.py  base.py  cookie.py  memory.py  redis.py
starsessions/stores/: __init__.py  base.py  cookie.py  database.py  memory.py  redis.py  redis_store.py
tests/: __init__.py  conftest.py  middleware.py  session.py  test_autoloading.py  test_encryptors.py  test_expiring_session.py  test_metadata.py  test_middleware.py  test_rolling_session.py  test_serializers.py  test_session.py
tests/backends/: test_cookie.py  test_database.py  test_memory.py  test_redis.py
