[tool.poetry]
name = "starsessions"
version = "2.1.1"
description = "Advanced sessions for Starlette and FastAPI frameworks"
authors = ["alex.oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alex-oleshkevich/starsessions"
repository = "https://github.com/alex-oleshkevich/starsessions"
documentation = "https://github.com/alex-oleshkevich/starsessions"
keywords = ["starlette", "fastapi", "asgi", "session"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8.0"
starlette = "^0"
itsdangerous = "^2.0.1"
redis = {version = ">=4.2.0rc1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^22.10.0"
pytest-asyncio = "^0.19.0"
requests = "^2.25.1"
pytest-cov = "^4.0"
flake8 = "^5.0.4"
mypy = "^0.990"
fastapi = "^0.79.0"
redis = ">=4.2.0rc1"
types-redis = "^4.3.20"

[tool.poetry.extras]
redis = ["redis"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line_length = 120

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
known_standard_library = "dataclasses,typing_extensions"
known_first_party = "starsessions"
known_third_party = ["pkg_resources", "toml"]
known_future_library = "__future__"
line_length = 120
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.coverage.run]
branch = true
source = ["starsessions"]
omit = ["tests/*", ".venv/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["starsessions", "tests", "examples"]
exclude = "/*venv/"
pretty = true
strict = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.2"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [".git", ".venv"]
addopts = "--tb=short -s --no-cov-on-fail"
testpaths = ["tests"]
