[tool.poetry]
name = "starsessions"
version = "2.2.1"
description = "Advanced sessions for Starlette and FastAPI frameworks"
authors = ["alex.oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alex-oleshkevich/starsessions"
repository = "https://github.com/alex-oleshkevich/starsessions"
documentation = "https://github.com/alex-oleshkevich/starsessions"
keywords = ["starlette", "fastapi", "asgi", "session"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8.0"
starlette = "*"
itsdangerous = "^2"
redis = { version = ">=4.2.0rc1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "5.0.0"
mypy = "1.11.2"
fastapi = "0.115.0"
redis = ">=4.2.0rc1"
httpx = "^0.27.2"

[tool.poetry.extras]
redis = ["redis"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["starsessions"]
omit = ["tests/*", ".venv/*", ".git/*", "*/__main__.py", "examples"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.mypy]
files = ["starsessions", "examples", "tests"]
pretty = true
strict = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'session'
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short -s --no-cov-on-fail"
testpaths = ["tests"]
norecursedirs = [
    "node_modules", "frontend", "storage", "dist", ".git",
    "*/migrations/*", "*/static/*", "docs", ".venv"
]

[tool.ruff]
exclude = [
    ".egg",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
