[project]
name = "starsessions"
version = "2.2.1"
description = "Advanced sessions for Starlette and FastAPI frameworks"
authors = [{ name = "Alex Oleshkevich", email = "alex.oleshkevich@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["starlette", "fastapi", "asgi", "session", "middleware", "http", "web"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "starlette>=0.14",
    "itsdangerous>=2",
]

[project.optional-dependencies]
redis = ["redis>=4.2"]
cryptography = ["cryptography>=42"]
all =  ["redis>=4.2", "cryptography>=42"]

[project.urls]
Homepage = "https://github.com/alex-oleshkevich/starsessions"
Repository = "https://github.com/alex-oleshkevich/starsessions"
Documentation = "https://github.com/alex-oleshkevich/starsessions"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "starsessions"
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "mypy>=1.14",
    "redis>=4.2",
    "httpx>=0.28",
    "cryptography>=42",
]

[tool.coverage.run]
branch = true
source = ["starsessions"]
omit = ["tests/*", ".venv/*", ".git/*", "*/__main__.py", "examples"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.mypy]
files = ["starsessions", "examples", "tests"]
pretty = true
strict = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'session'
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short -s --no-cov-on-fail"
filterwarnings = [
    "ignore::UserWarning:starsessions.encryptors",
]
testpaths = ["tests"]
norecursedirs = [
    "node_modules", "frontend", "storage", "dist", ".git",
    "*/migrations/*", "*/static/*", "docs", ".venv"
]

[tool.ruff]
exclude = [
    ".egg",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
